Fixed menu icon being shifted. (filter issue)

--- a/css/style.sass
+++ b/css/style.sass
@@ -29,7 +29,7 @@ main
     display: flex
     text-align: center
     flex-flow: column nowrap
-    margin-top: auto
+    margin: auto
     width: 60%
     h1
         font-size: 3em
